syntax = "proto3";

message Current {
    uint32 current_snapshot = 1;
}